# rasterizer

./: .gitignore  CMakeLists.txt  README.md
src/: app.hpp  canvas.hpp  color.hpp  common.hpp  context.hpp  frustum.hpp  light.hpp  main.cpp  mesh.hpp  obj.hpp  polygon.hpp  scene.hpp  texture.hpp  transformation.hpp  ui.hpp
wasm/: index.html
